<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/margin_medium"
            android:orientation="vertical">

            <EditText
                android:id = "@+id/usernameEditText"
                android:hint="@string/activity_register_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_item_height"
                android:layout_marginBottom="@dimen/margin_medium"/>

            <EditText
                android:id = "@+id/emailEditText"
                android:hint="@string/activity_register_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_item_height"
                android:layout_marginBottom="@dimen/margin_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id = "@+id/passwordEditText"
                    android:hint="@string/activity_register_password"
                    android:inputType="textPassword"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_item_height"
                    android:layout_marginBottom="@dimen/margin_medium"/>

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id = "@+id/ShowPasswordButton"
                    android:background="@drawable/icon_password_show"/>

            </LinearLayout>

            <Button
                android:id = "@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_item_height"
                android:text="@string/profile_register_button"/>

            <ProgressBar
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/ctrlActivityIndicator"
                android:indeterminateOnly="true"
                android:keepScreenOn="true"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:text ="@string/profile_already_have_account"/>

                <TextView
                    android:id="@+id/Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/colorLoginLink"
                    android:text="@string/profile_login_button"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>